--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.10.13",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-router-dom": "^5.2.0"
   }
 }
